# secure-patient-intake

./: .env.example  .gitignore  LICENSE  Makefile  README.md  cypress.config.ts  pyproject.toml  tsconfig.json
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/data/: users.ts
backend/src/middleware/: auth.ts  role.ts
backend/src/models/: patient.ts
backend/src/routes/: patients.ts
backend/src/services/: auditLog.ts
backend/src/utils/: maskSSN.ts
cypress/e2e/: dashboard.cy.ts  patient_flow.cy.ts
cypress/support/: e2e.ts
deid/: __init__.py  audit.py  cli.py  config.py  guard.py  synth.py  train.py  types.py
deid/eval/: __init__.py  harness.py  metrics.py
deid/loaders/: __init__.py  n2c2.py
deid/redactors/: __init__.py  base.py  llm.py  rules.py  transformer.py
deploy/: .env.example  Caddyfile  DEPLOY.md  Dockerfile  docker-compose.yml
frontend/: cypress.config.ts  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  theme.css
frontend/src/components/: ui.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AuditTrail.tsx  Benchmark.tsx  Dashboard.css  Dashboard.tsx  DeidStudio.tsx  LoginPage.css  LoginPage.tsx  Patients.tsx
results/: llm.json  rules.json  transformer.json
results/heldout/: rules_heldout.json  transformer_heldout.json
scripts/: compare.py  report.py
service/: __init__.py  db.py  main.py  security.py
tests/: test_audit_and_guard.py  test_metrics.py  test_no_contamination.py  test_transformer_decode.py
